# ai-stack

./: .env.example  .gitignore  AGENTS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  install.sh
bare-metal/doclific/: install.sh
bare-metal/llama-cpp/: install.sh
bare-metal/mcp-vram-manager/: mcp_server.py
bare-metal/stt/: install.sh  pyproject.toml
bare-metal/stt-proxy/: README.md  install.sh  requirements.txt  stt_proxy.py  test-router-mode.sh
bare-metal/stt/config/: config.yaml  whisper-api.service  whisper-idle-monitor.service
bare-metal/stt/docs/: STT-WORKFLOWS.md  WHISPER-STT-DOCUMENTATION.md  WHISPER-STT-ISSUES-AND-SOLUTIONS.md  WHISPER-STT-QUICK-REFERENCE.md
bare-metal/stt/poc/config/: FINAL-FIX.md  FIXES.md  KEYBINDINGS.md  LONG-CONVERSATION-FIX.md  NOTIFICATIONS-LOGGING.md  README-idle-stop.md  config.yaml  whisper-cleanup.sh  whisper-idle-monitor.sh
bare-metal/stt/poc/systemd/: whisper-api.service  whisper-idle-monitor.service
bare-metal/stt/scripts/: hypr-stt  idle-monitor.sh  whisper-activity  whisper-client  whisper-idle-monitor.sh
bare-metal/stt/src/whisper_stt/: __init__.py  __main__.py  config.py  logging_config.py  models.py  server.py  service.py
bare-metal/stt/systemd/: whisper-idle-monitor.service  whisper-server.service
bare-metal/stt/tests/: test_config.py  test_models.py
containers/: compose.yaml
containers/ai-router/: Dockerfile  (+1 more)
docs/: hardware-profile.md  huggingface-cli-guide.md  llama-cpp-router-mode.md  stt-architecture.md
lib/: common.sh  install-base.sh  journald-ai-stack.conf
templates/: zshenv.template
(+25 files in other folders)
